--- a/shell-ui/package.json
+++ b/shell-ui/package.json
@@ -1,29 +1,61 @@
 {
   "name": "vibeos-shell",
-  "version": "0.2.0",
-  "description": "VibeOS Shell - Embedded conversational AI interface",
+  "version": "0.3.0",
+  "description": "VibeOS Shell - Embedded conversational AI interface with React + Motion",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "electron . --enable-logging",
-    "build": "electron-builder",
-    "pack": "electron-builder --dir"
+    "dev": "npm run build:renderer && electron . --enable-logging",
+    "dev:vite": "vite",
+    "build": "npm run build:renderer && electron-builder",
+    "build:renderer": "vite build",
+    "pack": "electron-builder --dir",
+    "typecheck": "tsc --noEmit"
   },
   "author": "VibeOS",
   "license": "MIT",
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.0",
     "eventsource": "^2.0.2",
-    "marked": "^15.0.0"
+    "lucide-react": "^0.562.0",
+    "motion": "^12.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "sonner": "^1.7.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/node": "^22.0.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
     "electron": "^33.0.0",
-    "electron-builder": "^25.0.0"
+    "electron-builder": "^25.0.0",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.6.0",
+    "vite": "^6.0.0"
   },
   "build": {
     "appId": "com.vibeos.shell",
     "productName": "VibeOS Shell",
+    "files": [
+      "main.js",
+      "preload.js",
+      "icon.html",
+      "dist/**/*"
+    ],
     "linux": {
-      "target": ["AppImage", "deb"],
+      "target": [
+        "AppImage",
+        "deb"
+      ],
       "category": "Utility"
     }
   }
