feat: add unit test infrastructure with Vitest
Phase 3 - Testing setup and initial tests:
- Install vitest, @testing-library/react, @testing-library/jest-dom
- Create vitest.config.ts with React and path alias support
- Create test setup with window.vibeos mocks
- Add test scripts to package.json (test, test:watch, test:coverage)
- Write 9 tests for ErrorBoundary component
- Write 6 tests for useConnectionStatus hook
- Write 15 tests for useSession hook (init, sendMessage, abort, reset, SSE)

All 30 tests passing.

--- a/shell-ui/package.json
+++ b/shell-ui/package.json
@@ -10,7 +10,10 @@
     "build": "npm run build:renderer && electron-builder",
     "build:renderer": "vite build",
     "pack": "electron-builder --dir",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "author": "VibeOS",
   "license": "MIT",
@@ -32,15 +35,20 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.0",
     "electron": "^33.0.0",
     "electron-builder": "^25.0.0",
+    "jsdom": "^27.4.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.6.0",
-    "vite": "^6.0.0"
+    "vite": "^6.0.0",
+    "vitest": "^4.0.17"
   },
   "build": {
     "appId": "com.vibeos.shell",
